Migrated to Java 21. Implemented many fixes